adjusted icon sizes and bottom margins

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
 
             <div class="text">
-                <p>Atupa (A Static Landing Page)</p>
+                <p>Atupa (A Static Web Page)</p>
             </div>
             
         </div>
