added telephone number

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <a href="https://www.linkedin.com/in/peter-omoyele-756687144/" target="_blank"><img src="assets/linkedin.svg" alt="LinkedIn Logo"></a>
 
-            <a href="" target="_blank"><img src="assets/whatsapp.svg" alt="WhatsApp Logo"></a>
+            <a href="tel:+2348104169216" target="_blank"><img src="assets/whatsapp.svg" alt="WhatsApp Logo"></a>
 
             <a href="mailto:peteromoyele@gmail.com" target="_blank"><img src="assets/gmail.svg" alt="Gmail Logo"></a>
 
@@ -31,8 +31,7 @@
 
             <div class="image">
                 <a href="https://medium.com/@peteromoyele" target="_blank">
-                    <img src="assets/medium.svg" alt="Medium Logo"> 
-                </a>
+                    <img src="assets/medium.svg" alt="Medium Logo"
             </div>
 
             <div class="text">
