fixed broken code

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
             <div class="image">
                 <a href="https://medium.com/@peteromoyele" target="_blank">
-                    <img src="assets/medium.svg" alt="Medium Logo"
+                    <img src="assets/medium.svg" alt="Medium Logo">
+                </a>
             </div>
 
             <div class="text">
