added new updates

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="main-container">
-        <img class="picture" src="assets/Anomaly.jpeg" alt="">
+        <img class="picture" src="assets/Anomaly-removebg.png" alt="">
         <h3>Olafimihan</h3>
         <p class="who">Front-end Developer</p>
         <div class="social-buttons">
