fixed javascript bug

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         //Hover Script For mediumArticles
 
-        let mediumArticles = documment.getElementsByClassName("mediumArticles")[0];
+        let mediumArticles = document.getElementsByClassName("mediumArticles")[0];
 
         mediumArticles.addEventListener("touchstart", function(){
             mediumArticles.classList.add("mediumArticlesHover")
