corrected syntax error

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
         //Hover script for fancyLink
 
-        let fancyLink = document.getElementsByClassName("fancyLink"){0};
+        let fancyLink = document.getElementsByClassName("fancyLink")[0];
 
         fancyLink.addEventListener("touchstart", function(){
             fancyLink,classList.add("fancyLinkHover")
