--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
         //Hover Script For oke
 
-        let oke = document.getElementsByClassName("oke"){0};
+        let oke = document.getElementsByClassName("oke")[0];
 
         oke.addEventListener("touchstart", function(){
             oke.classList.add("okeHover")
