changed background colour

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <p>
                 <a class="fancyLink fancyLinkHover" href="https://drive.google.com/drive/folders/1qwT8f1oS5n5nuI4rvWtYENRHxh4S03FR?usp=sharing" target="_blank">I am a Creative Content Writer</a>
             </p>
-            <p>Outside of work, i'm in the midst of writing songs, short poems and learning to code.</p>
+            <p>Outside of work, I'm in the midst of writing songs, short poems and learning to code.</p>
             <p>I love music, basketball, short films, and the outdoors.</p>
-            <p>Other hobbies include boring people with my love and admiration for Sekoutoure Abodunrin, Olakunle Soriyan, Wole Soyinka, Chimamanda Ngozi Adichie & Stephen Curry.</p>
+            <p>Other hobbies include boring people with my love and admiration for Sekoutoure Abodunrin, Olakunle Soriyan, Wole Soyinka, Chimamanda Ngozi Adichie, Lecrae Moore & Stephen Curry.</p>
         </section>
         
         <div class="social-buttons">
