made more edits

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <img class="picture" src="assets/Anomaly-removebg.png" alt="">
             <h3>Olafimihan</h3>
             <p class="subtext">Writer (English, HTML, CSS & JavaScript)</p>
-            <p class="intro-text">
-                <a class="fancyLink fancyLinkHover" href="https://drive.google.com/drive/folders/1qwT8f1oS5n5nuI4rvWtYENRHxh4S03FR?usp=sharing" target="_blank">I am a Creative Content Writer</a>
+            <p class="intro-text first-line">
+                <a class="fancyLink fancyLinkHover" href="https://drive.google.com/drive/folders/1qwT8f1oS5n5nuI4rvWtYENRHxh4S03FR?usp=sharing" target="_blank"><em>I am a Creative Content Writer</em></a>
             </p>
             <p class="intro-text">Outside of work, I'm in the midst of writing songs, short poems and learning to code.</p>
             <p class="intro-text">I love music, basketball, short films, and the outdoors.</p>
